[gd_scene load_steps=3 format=3 uid="uid://ds5bf8cdlryeg"]

[ext_resource type="Script" path="res://scripts/battle_ui.gd" id="1_bixgw"]
[ext_resource type="PackedScene" uid="uid://bbdhec2d0jaoc" path="res://scenes/card_ui.tscn" id="2_j8uyp"]

[node name="BattleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bixgw")
metadata/_edit_lock_ = true

[node name="Hand" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 490.0
offset_right = 938.0
offset_bottom = 596.0
alignment = 1

[node name="Card" parent="Hand" instance=ExtResource("2_j8uyp")]
layout_mode = 2

[node name="Card2" parent="Hand" instance=ExtResource("2_j8uyp")]
layout_mode = 2

[node name="Card3" parent="Hand" instance=ExtResource("2_j8uyp")]
layout_mode = 2

[node name="Card4" parent="Hand" instance=ExtResource("2_j8uyp")]
layout_mode = 2

[node name="Card5" parent="Hand" instance=ExtResource("2_j8uyp")]
layout_mode = 2

[node name="Card6" parent="Hand" instance=ExtResource("2_j8uyp")]
layout_mode = 2

[node name="Card7" parent="Hand" instance=ExtResource("2_j8uyp")]
layout_mode = 2

[node name="PlayerStats" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 345.0
offset_right = 230.0
offset_bottom = 472.0
text = "‚ô• HEALTH:
üõ°  SHIELD:
üîÆ MANA:
‚úñ DISCARD:
üÉè  DECK:"

[node name="HPValue" type="Label" parent="PlayerStats"]
layout_mode = 0
offset_left = 111.0
offset_right = 173.0
offset_bottom = 23.0
text = "100/100"

[node name="ShieldValue" type="Label" parent="PlayerStats"]
layout_mode = 0
offset_left = 111.0
offset_top = 26.0
offset_right = 173.0
offset_bottom = 49.0
text = "0"

[node name="ManaValue" type="Label" parent="PlayerStats"]
layout_mode = 0
offset_left = 111.0
offset_top = 52.0
offset_right = 173.0
offset_bottom = 75.0
text = "4/4"

[node name="DiscardValue" type="Label" parent="PlayerStats"]
layout_mode = 0
offset_left = 111.0
offset_top = 78.0
offset_right = 173.0
offset_bottom = 101.0
text = "3/3"

[node name="DeckValue" type="Label" parent="PlayerStats"]
layout_mode = 0
offset_left = 110.0
offset_top = 104.0
offset_right = 178.0
offset_bottom = 127.0
text = "30/30"

[node name="EnemyStats" type="Label" parent="."]
layout_mode = 0
offset_left = 784.0
offset_top = 38.0
offset_right = 986.0
offset_bottom = 168.0
text = "‚ô• HEALTH:
‚öî ATTACK:

Last Spell:
Round Total:"
vertical_alignment = 2

[node name="NameValue" type="Label" parent="EnemyStats"]
layout_mode = 0
offset_left = 7.0
offset_top = -23.0
offset_right = 90.0
text = "‚ùó  ENEMY"

[node name="HPValue" type="Label" parent="EnemyStats"]
layout_mode = 0
offset_left = 110.0
offset_top = 2.0
offset_right = 193.0
offset_bottom = 25.0
text = "100/100"

[node name="AtkValue" type="Label" parent="EnemyStats"]
layout_mode = 0
offset_left = 110.0
offset_top = 29.0
offset_right = 193.0
offset_bottom = 52.0
text = "10"

[node name="RoundTotValue" type="Label" parent="EnemyStats"]
layout_mode = 0
offset_left = 110.0
offset_top = 107.0
offset_right = 193.0
offset_bottom = 130.0
text = "0"

[node name="LastSpellValue" type="Label" parent="EnemyStats"]
layout_mode = 0
offset_left = 110.0
offset_top = 82.0
offset_right = 193.0
offset_bottom = 105.0
text = "0"

[node name="Spells" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 312.0
offset_bottom = 248.0

[node name="Bolt" type="Label" parent="Spells"]
layout_mode = 2
text = "‚ùî  TWIN BOLT                        [  3   3  ]         15  x  1.0"

[node name="Blast" type="Label" parent="Spells"]
layout_mode = 2
text = "‚ùî  CHROMATIC BLAST        [  3   3   3  ]      10  x  2.0"

[node name="Weave" type="Label" parent="Spells"]
layout_mode = 2
text = "‚ùì  ELEMENTAL WEAVE       [  2   3   4  ]      15  x  2.0"

[node name="Tarots" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 950.0
offset_top = 274.0
offset_right = 1139.0
offset_bottom = 375.0

[node name="Button" type="Button" parent="Tarots"]
layout_mode = 2
text = "The Sun"

[node name="Button2" type="Button" parent="Tarots"]
layout_mode = 2
text = "The Moon"

[node name="Button3" type="Button" parent="Tarots"]
layout_mode = 2
text = "The World"

[node name="TarotButton" type="Button" parent="."]
layout_mode = 0
offset_left = 994.0
offset_top = 389.0
offset_right = 1133.0
offset_bottom = 434.0
text = "üé¥  TAROT"

[node name="CastButton" type="Button" parent="."]
layout_mode = 0
offset_left = 947.0
offset_top = 445.0
offset_right = 1102.0
offset_bottom = 572.0
text = "üîÆ CAST"

[node name="DiscardButton" type="Button" parent="."]
layout_mode = 0
offset_left = 994.0
offset_top = 582.0
offset_right = 1133.0
offset_bottom = 627.0
text = "‚úñ DISCARD"

[node name="SortToggle" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 441.0
offset_top = 611.0
offset_right = 485.0
offset_bottom = 635.0
button_pressed = true

[node name="ElementLabel" type="Label" parent="SortToggle"]
layout_mode = 0
offset_left = -62.0
offset_right = 2.0
offset_bottom = 23.0
text = "Affinity"

[node name="ValueLabel" type="Label" parent="SortToggle"]
layout_mode = 0
offset_left = 47.0
offset_right = 91.0
offset_bottom = 23.0
text = "Value"

[node name="SelectLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 838.0
offset_top = 611.0
offset_right = 878.0
offset_bottom = 634.0
text = "0/3"
horizontal_alignment = 1

[connection signal="pressed" from="TarotButton" to="." method="_on_tarot_button_pressed"]
[connection signal="pressed" from="CastButton" to="." method="_on_cast_button_pressed"]
[connection signal="pressed" from="DiscardButton" to="." method="_on_discard_button_pressed"]
[connection signal="toggled" from="SortToggle" to="." method="_on_sort_button_toggled"]
